<resources>
    <string name="app_name">Приложуха</string>
    <string name="tab_text_1">Новости</string>
    <string name="tab_text_2">Турниры</string>
    <string name="tab_text_3">Буткемп</string>
    <string name="tab_text_4">Профиль</string>
    <string name="date_select">Выбрать дату</string>
    <string name="time_select">Выбрать время</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_time">время бронирования:</string>
    <string name="no_selected_date">дата не выбрана</string>
    <string name="no_selected_time">время не выбрано</string>
    <string name="no_selected_comp">комп не выбран</string>
    <string name="selected_comp">компьютер №</string>
    <string name="prompt_email">Email</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_title">Информация по бронированию</string>
    <string name="dialog_ok">подтвердить</string>
    <string name="dialog_no">отмена</string>
    <string name="finish_button_text">готово</string>
    <string-array name="time_spinner">
        <item>один час</item>
        <item>полтора часа</item>
        <item>два часа</item>
    </string-array>
</resources>